--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description"
-    content="大家好，我们是SARO。这个网站主要是为想要学习波兰语的朋友而建设。 网站的主要语言是英语，但我们也加入了日语和韩语。
+  <meta name="description" content="大家好，我们是SARO。这个网站主要是为想要学习波兰语的朋友而建设。 网站的主要语言是英语，但我们也加入了日语和韩语。
     SARO的名字来源于日本名“Saki”（沙季）和Robert. Saki（日本人）和Robert（波兰人）是一对未婚夫妇，他们在这个网站努力
     分享他们的知识。">
   <meta name="keywords"
@@ -22,8 +21,8 @@
   <script defer src="https://saro.website/assets/js/cookie.js"></script>
   <script data-ad-client="ca-pub-5704095251892500" defer
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="../assets/style/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+  <link rel="stylesheet" href="../assets/style/css/style.css">
   <title>欢迎来到SARO -课程</title>
 </head>
 
@@ -65,7 +64,7 @@
         <h1>课程</h1>
         <h2 class="unit">第1单元</h2>
         <div class="container">
-          <button class="lesson lesson--alphabet">字母表</button>
+          <button class="acc lesson lesson--alphabet">字母表</button>
           <div class="panel">
             <h2>字母表</h2>
             <p lang="pl">欢迎来到我们的第一节！今天我们会学习波兰语的字母和单词！<br>
@@ -82,11 +81,13 @@
               比如 <br>
               单独发音字母: <img class="sound" class="alphabetLesson" src="./../assets/img/icons/speaker.svg"
                 alt="Speaker icon" onclick="play()">
-              <audio class="audio" src="./../media/unit0/alphabet/records/spółgłoski ex1.wav"></audio>b, p, t, d, s, h, k
+              <audio class="audio" src="./../media/unit0/alphabet/records/spółgłoski ex1.wav"></audio>b, p, t, d, s, h,
+              k
               <br>
-              复合发音字母: <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg"
-                alt="Speaker icon" onclick="play()">
-              <audio class="audio" src="./../media/unit0/alphabet/records/spółgłoski ex2.wav"></audio> be, pe, te, de, sy,
+              复合发音字母: <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg" alt="Speaker icon"
+                onclick="play()">
+              <audio class="audio" src="./../media/unit0/alphabet/records/spółgłoski ex2.wav"></audio> be, pe, te, de,
+              sy,
               ha,
               ka
               <br>
@@ -193,7 +194,8 @@
               波兰语字母也有一些例外，当你遇到J, Y, Z, Ź, Ż单独发音时, 你需要用不一样的方式: <br>
               <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg" alt="Speaker icon"
                 onclick="play()">
-              <audio class="audio" src="./../media/unit0/alphabet/records/wyjątki.wav"></audio> (jot, igrek, zet, ziet, żet)
+              <audio class="audio" src="./../media/unit0/alphabet/records/wyjątki.wav"></audio> (jot, igrek, zet, ziet,
+              żet)
               <br>
               <br>
               在波兰语种还有2个字母组合的和3个字母组合的音节。虽然它们不是官方字母表的一部分，但是记住它们也很重要：<br>
@@ -201,20 +203,20 @@
               Ch - 读上去像H <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg"
                 alt="Speaker icon" onclick="play()">
               <audio class="audio" src="./../media/unit0/alphabet/records/dwuznaki/ch.wav"></audio> 比如：chałwa <br>
-              Ci - 读作Ć, 和更长的i <img class="sound" class="alphabetLesson"
-                src="../assets/img/icons/speaker.svg" alt="Speaker icon" onclick="play()">
+              Ci - 读作Ć, 和更长的i <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg"
+                alt="Speaker icon" onclick="play()">
               <audio class="audio" src="./../media/unit0/alphabet/records/dwuznaki/ci.wav"></audio> 比如：cisza <br>
               Cz - 读作英语的ch <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg"
                 alt="Speaker icon" onclick="play()">
               <audio class="audio" src="./../media/unit0/alphabet/records/dwuznaki/cz.wav"></audio> 比如：czarny <br>
-              Dz - 读法接近C和Z之间 <img class="sound" class="alphabetLesson"
-                src="../assets/img/icons/speaker.svg" alt="Speaker icon" onclick="play()">
+              Dz - 读法接近C和Z之间 <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg"
+                alt="Speaker icon" onclick="play()">
               <audio class="audio" src="./../media/unit0/alphabet/records/dwuznaki/dz.wav"></audio> 比如：dzban <br>
-              Dzi - 读法接近ci和ź之间 <img class="sound" class="alphabetLesson"
-                src="../assets/img/icons/speaker.svg" alt="Speaker icon" onclick="play()">
+              Dzi - 读法接近ci和ź之间 <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg"
+                alt="Speaker icon" onclick="play()">
               <audio class="audio" src="./../media/unit0/alphabet/records/dwuznaki/dzi.wav"></audio> 比如：dzik <br>
-              Dź - 读作dzi,但更短 <img class="sound" class="alphabetLesson"
-                src="../assets/img/icons/speaker.svg" alt="Speaker icon" onclick="play()">
+              Dź - 读作dzi,但更短 <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg"
+                alt="Speaker icon" onclick="play()">
               <audio class="audio" src="./../media/unit0/alphabet/records/dwuznaki/dź.wav"></audio> 比如：dźwięk <br>
               Ni - 读作Ń,但更长 <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg"
                 alt="Speaker icon" onclick="play()">
@@ -244,8 +246,8 @@
                 alt="Speaker icon" onclick="play()">
               <audio class="audio" src="./../media/unit0/alphabet/records/litery/V.wav"></audio> 比如：wentylacja <br>
               注意，以上的单词有不一样的拼写方式，但原本的字母使用这些ex, xylophone, quartet, quad, ventilation. <br>
-              V在单独读时也有例外: <img class="sound" class="alphabetLesson"
-                src="../assets/img/icons/speaker.svg" alt="Speaker icon" onclick="play()">
+              V在单独读时也有例外: <img class="sound" class="alphabetLesson" src="../assets/img/icons/speaker.svg"
+                alt="Speaker icon" onclick="play()">
               <audio class="audio" src="./../media/unit0/alphabet/records/litery/V2.wav"></audio> <br>
               <br>
               学得差不多了，我们来做练习吧。 <br>
@@ -312,7 +314,7 @@
           </div>
           <script src="../assets/js/alphabetLesson.js"></script>
 
-          <button class="lesson lesson--declension">词形变化</button>
+          <button class="acc lesson lesson--declension">词形变化</button>
           <div class="panel">
             <h2>词形变化</h2>
             <p lang="pl">有时波兰语的单词在段落里会有点不一样，即使是在简单的句子里。<br>
@@ -477,8 +479,8 @@
               Miejscownik - domu <br>
               Wołacz - domu <br>
               <br>
-              有很多网站可以查询词形变化，比如：<a href="https://odmiana.net/"
-                target="_blank">https://odmiana.net/</a>. 你可以输入你想要知道的单词，单复数都会在结果中显示。<br>
+              有很多网站可以查询词形变化，比如：<a href="https://odmiana.net/" target="_blank">https://odmiana.net/</a>.
+              你可以输入你想要知道的单词，单复数都会在结果中显示。<br>
               <br>
               祝你好运，学了新的词汇和用法后欢迎你随时回到这里! <br>
             </p>
@@ -487,13 +489,14 @@
               <a href="about.html" target="_blank">@Weronika</a>
             </div>
           </div>
-          <button class="lesson lesson--wordOrder">词语排序</button>
+          <button class="acc lesson lesson--wordOrder">词语排序</button>
           <div class="panel">
             <h2>语序</h2>
             <p>学英言时最重要的是造句。你可以学很多单词，但把他们组合在一起的能力才是真正需要的。
               这节课我们来学习如何把单词构成一句简单的句子。<br>
               首先是一句句子的常规顺序：</p>
-            <img src="../assets/img/lessons/word-order/structure.png" alt="Struktura" class="myImg image-center__center">
+            <img src="../assets/img/lessons/word-order/structure.png" alt="Struktura"
+              class="myImg image-center__center">
             <div class="center__item">
               <h3>主语 + 动词 + 宾语 (SVO).</h3>
             </div>
@@ -509,7 +512,7 @@
               <br>
               James nie mówi po polsku. - James不会说波兰语。 (也就是James不说波兰语。)
               <br>
-             有时这个顺序或者附加的单词会因为强调的内容不同而有点不一样。通常句末的词常被强调，比如：</p>
+              有时这个顺序或者附加的单词会因为强调的内容不同而有点不一样。通常句末的词常被强调，比如：</p>
             <br>
 
             <div class="center__item">
@@ -616,12 +619,13 @@
               <a href="about.html" target="_blank">@Weronika</a>
             </div>
           </div>
-          <button class="lesson lesson--adj">形容词</button>
+          <button class="acc lesson lesson--adj">形容词</button>
           <div class="panel">
             <h2>形容词</h2>
             <p lang="pl">就如你在之前的课程词形变化中看到的，波兰语的名词因为格位不同而有所不同。(复数：przypadki)。
               形容词也是需要改变的。它也有7个格位，我们要知道如何做一个正确的词形变化 (odmiana) 。 <br>
-              形容词的作用是描述名词，所以它回答的问题是：哪种？什么的？(复数：jaki, jaka, jakie?), 哪（一个）？ <span lang="pl">(który, która, które?)</span>, 谁的？ (czyj, czyja, czyje?).
+              形容词的作用是描述名词，所以它回答的问题是：哪种？什么的？(复数：jaki, jaka, jakie?), 哪（一个）？ <span lang="pl">(który, która,
+                które?)</span>, 谁的？ (czyj, czyja, czyje?).
             </p>
             <b>举例说明：</b>
             <img src="../assets/img/lessons/adjectives/table1.jpg" alt="Polish adjectives"
@@ -714,65 +718,65 @@
               </tr>
               <tr>
                 <td lang="pl">szy <i class="fas fa-arrow-right"></i> si</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>chy <i class="fas fa-arrow-right"></i> si</td>
-                  <td>cichy <i class="fas fa-arrow-right"></i> cisi</td>
-                </tr>
-                <tr>
-                  <td>ży (sometimes) <i class="fas fa-arrow-right"></i> zi</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>ty <i class="fas fa-arrow-right"></i> ci</td>
-                  <td>otwarty <i class="fas fa-arrow-right"></i> otwarci</td>
-                </tr>
-                <tr>
-                  <td>sty <i class="fas fa-arrow-right"></i> ści</td>
-                  <td>wyrazisty <i class="fas fa-arrow-right"></i> wyraziści</td>
-                </tr>
-                <tr>
-                  <td colspan="2" style="background-color: #ADC5DF;">改变辅音字母, <i>i</i> 改为 <i>y</i>
-                  </td>
-                </tr>
-                <tr>
-                  <td>ki <i class="fas fa-arrow-right"></i> cy</td>
-                  <td>głęboki <i class="fas fa-arrow-right"></i> głębocy</td>
-                </tr>
-                <tr>
-                  <td>gi <i class="fas fa-arrow-right"></i> dzy</td>
-                  <td>długi <i class="fas fa-arrow-right"></i> dłudzy</td>
-                </tr>
-                <tr>
-                  <td colspan="2">没有改变, 含有i</td>
-                </tr>
-                <tr>
-                  <td>pi <i class="fas fa-arrow-right"></i> pi</td>
-                  <td>głupi <i class="fas fa-arrow-right"></i> głupi</td>
-                </tr>
-                <tr>
-                  <td>si <i class="fas fa-arrow-right"></i> si</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>wi <i class="fas fa-arrow-right"></i> wi</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td colspan="2" style="background-color: #ADC5DF;"> 没有改变，含有 <i>y</i>
-                  </td>
-                </tr>
-                <tr>
-                  <td>rzy <i class="fas fa-arrow-right"></i> rzy</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>ży <i class="fas fa-arrow-right"></i> (有时) ży</td>
-                  <td>chyży <i class="fas fa-arrow-right"></i> chyży</td>
-                </tr>
-              </table>
-              <p>
+                <td></td>
+              </tr>
+              <tr>
+                <td>chy <i class="fas fa-arrow-right"></i> si</td>
+                <td>cichy <i class="fas fa-arrow-right"></i> cisi</td>
+              </tr>
+              <tr>
+                <td>ży (sometimes) <i class="fas fa-arrow-right"></i> zi</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>ty <i class="fas fa-arrow-right"></i> ci</td>
+                <td>otwarty <i class="fas fa-arrow-right"></i> otwarci</td>
+              </tr>
+              <tr>
+                <td>sty <i class="fas fa-arrow-right"></i> ści</td>
+                <td>wyrazisty <i class="fas fa-arrow-right"></i> wyraziści</td>
+              </tr>
+              <tr>
+                <td colspan="2" style="background-color: #ADC5DF;">改变辅音字母, <i>i</i> 改为 <i>y</i>
+                </td>
+              </tr>
+              <tr>
+                <td>ki <i class="fas fa-arrow-right"></i> cy</td>
+                <td>głęboki <i class="fas fa-arrow-right"></i> głębocy</td>
+              </tr>
+              <tr>
+                <td>gi <i class="fas fa-arrow-right"></i> dzy</td>
+                <td>długi <i class="fas fa-arrow-right"></i> dłudzy</td>
+              </tr>
+              <tr>
+                <td colspan="2">没有改变, 含有i</td>
+              </tr>
+              <tr>
+                <td>pi <i class="fas fa-arrow-right"></i> pi</td>
+                <td>głupi <i class="fas fa-arrow-right"></i> głupi</td>
+              </tr>
+              <tr>
+                <td>si <i class="fas fa-arrow-right"></i> si</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>wi <i class="fas fa-arrow-right"></i> wi</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td colspan="2" style="background-color: #ADC5DF;"> 没有改变，含有 <i>y</i>
+                </td>
+              </tr>
+              <tr>
+                <td>rzy <i class="fas fa-arrow-right"></i> rzy</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>ży <i class="fas fa-arrow-right"></i> (有时) ży</td>
+                <td>chyży <i class="fas fa-arrow-right"></i> chyży</td>
+              </tr>
+            </table>
+            <p>
               注意：在某些短语中，形容词用在名词 <u>之后</u> 。 <br>
               duże państwo, potężne państwo <i class="fas fa-arrow-right"></i> państwo polskie <br>
               czarny kot, pogodny kot <i class="fas fa-arrow-right"></i> kot domowy <br>
@@ -783,7 +787,7 @@
               <a href="about.html" target="_blank">@Magda</a>
             </div>
           </div>
-          <button class="lesson lesson--nounGender">名词的语法性别
+          <button class="acc lesson lesson--nounGender">名词的语法性别
           </button>
           <div class="panel">
             <h2>名词的语法性别</h2>
@@ -813,13 +817,13 @@
               我想你现在已经知道性别是波兰语语法中有多重要。现在我们继续学习，看看<strong>波兰语中因名词的语法性别不同</strong>
               而产生的词形变化。<br>
               波兰语中，每一个名词都有语法性别，三个基本性别是： <br>
-              </p>
-              <ul class="noun-gender">
-                <li>阳性 <span lang="pl">(rodzaj męski)</span></li>
-                <li>阴性 <span lang="pl">(rodzaj żeński)</span></li>
-                <li>中性 (rodzaj nijaki) </li>
-                </ul>
-              <p>
+            </p>
+            <ul class="noun-gender">
+              <li>阳性 <span lang="pl">(rodzaj męski)</span></li>
+              <li>阴性 <span lang="pl">(rodzaj żeński)</span></li>
+              <li>中性 (rodzaj nijaki) </li>
+            </ul>
+            <p>
               在区分人时，三性很好区分，现在我们分别来说一下：<br>
               <span lang="pl">Ten mężczyzna </span>– 这个男人-> 阳性/男性 <br>
               <span lang="pl">Ten chłopiec</span> – 这个男孩 -> 阳性/男性 <br>
@@ -947,24 +951,24 @@
         </div>
 
         <!--
-        <button class="accordion-4">Lesson 2</button>
+        <button class="accordion-4">acc lesson 2</button>
         <div class="panel">
-          <h2>Lesson 2</h2><br>
+          <h2>acc lesson 2</h2><br>
           <p></p>
         </div>
-        <button class="accordion-4">Lesson 3</button>
+        <button class="accordion-4">acc lesson 3</button>
         <div class="panel">
-          <h2>Lesson 3</h2><br>
+          <h2>acc lesson 3</h2><br>
           <p></p>
         </div>
-        <button class="accordion-4">Lesson 4</button>
+        <button class="accordion-4">acc lesson 4</button>
         <div class="panel">
-          <h2>Lesson 4</h2><br>
+          <h2>acc lesson 4</h2><br>
           <p></p>
         </div>
-        <button class="accordion-4">Lesson 5</button>
+        <button class="accordion-4">acc lesson 5</button>
         <div class="panel">
-          <h2>Lesson 5</h2><br>
+          <h2>acc lesson 5</h2><br>
           <p></p>
         </div> -->
       </div>
@@ -1009,7 +1013,7 @@
             <option value="https://saro.website/jp/lessons.html">日本語</option>
             <option value="https://saro.website/kr/lessons.html">한국어</option>
             <option value="https://saro.website/vi/lessons.html">Tiếng Việt</option>
-        </select>
+          </select>
           <span class="custom-arrow"></span>
         </div>
       </div>
