--- a/ch/stuff/dialogue.html
+++ b/ch/stuff/dialogue.html
@@ -5,8 +5,7 @@
     <script data-ad-client="ca-pub-5704095251892500" defer
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charset="UTF-8">
-    <meta name="description"
-        content="大家好，我们是SARO。这个网站主要是为想要学习波兰语的朋友而建设。 网站的主要语言是英语，但我们也加入了日语和韩语。
+    <meta name="description" content="大家好，我们是SARO。这个网站主要是为想要学习波兰语的朋友而建设。 网站的主要语言是英语，但我们也加入了日语和韩语。
         SARO的名字来源于日本名“Saki”（沙季）和Robert. Saki（日本人）和Robert（波兰人）是一对未婚夫妇，他们在这个网站努力
         分享他们的知识。">
     <meta name="keywords"
@@ -74,7 +73,7 @@
                 <h1>日常对话</h1>
                 <article>
                     <div class="container">
-                        <button class="dialogue dialogue-polish__conversation">Polish Conversation</button>
+                        <button class="acc dialogue dialogue-polish__conversation">Polish Conversation</button>
                         <div class="panel">
                             <h2>日常用语</h2>
                             <p>如果你刚开始学习波兰语，你一定会遇到很多比较难的用法和语法问题。在开始比较高阶的学习之前，你可以先
@@ -137,7 +136,7 @@
                                 <a href="../about.html" target="_blank">@Justyna</a>
                             </div>
                         </div>
-                        <button class="dialogue dialogue-first__meting">First meeting</button>
+                        <button class="acc dialogue dialogue-first__meting">First meeting</button>
                         <div class="panel">
                             <h2>波兰日常对话 – 首次见面</h2>
                             <p> 在之前的对话中，你已经学会了日常的简单对话。你可以表示感谢或抱歉。当别人说话太快时你可以让他说
@@ -285,12 +284,12 @@
                             </div>
 
                         </div>
-                        <button class="dialogue dialogue-grocery__shoping">日用品商店购物</button>
+                        <button class="acc dialogue dialogue-grocery__shoping">日用品商店购物</button>
                         <div class="panel">
                             <h2>日用品店购物</h2>
                             <p>在这个课程中，我们会让你感受下在日用品商店购物的场景。在很多小店里是没有自助服务的，你必须跟营业员
-                             说你要什么。下面是一段对话，会有一些新的词汇和练习和一些之前你就看到过的词汇。而这节课后，你就会
-                             在商店购物时比较游刃有余。</p><br> <br>
+                                说你要什么。下面是一段对话，会有一些新的词汇和练习和一些之前你就看到过的词汇。而这节课后，你就会
+                                在商店购物时比较游刃有余。</p><br> <br>
                             <div class="content--dial">
                                 <div class="content--dial--item">
                                     <p>
