--- a/jp/stuff/dialogue.html
+++ b/jp/stuff/dialogue.html
@@ -62,7 +62,7 @@
                 <h1>会話文</h1>
                 <article>
                     <div class="content">
-                        <button class="dialogue dialogue-polish__conversation">ポーランド語の会話</button>
+                        <button class="acc dialogue dialogue-polish__conversation">ポーランド語の会話</button>
                         <div class="panel">
                             <h2>日常会話</h2>
                             <p> ポーランド語の勉強を始めよう！と思っても、難しいフレーズや文法の説明が出てきて、覚えるのは大変ですよね。<br>
@@ -168,7 +168,7 @@
                                     <a href="../about.html" target="_blank">@ロバート</a>
                             </div>
                         </div>
-                        <button class="dialogue dialogue-first__meting">自己紹介</button>
+                        <button class="acc dialogue dialogue-first__meting">自己紹介</button>
                         <div class="panel">
                             <h2>ポーランド語で自己紹介をしよう</h2>
                             <p> 一つ前のトピックで、ポーランド語の簡単なフレーズを学びました。<br>
@@ -420,7 +420,7 @@
                                     <a href="../about.html" target="_blank">@ロバート</a>
                             </div>
                         </div>
-                        <button class="dialogue dialogue-grocery__shoping">スーパーマーケットにて</button>
+                        <button class="acc dialogue dialogue-grocery__shoping">スーパーマーケットにて</button>
                         <div class="panel">
                             <h2>スーパーマーケットにて</h2>
                             <p>このレッスンでは、皆さんをスーパーマーケットへとお連れします♩多くのお店ではセルフサービスがなく、何を買いたいかを店主に伝えなくてはなりません。このレッスンで簡単な会話文、単語、演習問題をマスターし、ぜひ実践に生かしてみて下さい(^^)
