--- a/lessons.html
+++ b/lessons.html
@@ -63,7 +63,7 @@
         <h1>Lessons</h1>
         <h2 class="unit">UNIT 0</h2>
         <div class="container">
-          <button class="lesson lesson--alphabet">Alphabet</button>
+          <button class="acc lesson lesson--alphabet">Alphabet</button>
           <div class="panel">
             <h2>Alphabet</h2>
             <p lang="pl">Welcome in our first lession! Today we will learn how to read in polish and how to pronounce
@@ -314,7 +314,8 @@
                 onclick="play()">
               <audio class="audio" src="media/unit0/alphabet/records/ex3.wav"></audio>
               <br>
-              One last thing I want to note in this lesson is ortography. I have shown you the some examples of words
+              One last thing I want to note in this acc lesson is ortography. I have shown you the some examples of
+              words
               and
               letters, that has similiar or same reading. You probably wonder then, why are there words that are written
               in another way? <br>
@@ -332,7 +333,7 @@
           </div>
           <script src="./assets/js/alphabetLesson.js"></script>
 
-          <button class="lesson lesson--declension">Declension</button>
+          <button class="acc lesson lesson--declension">Declension</button>
           <div class="panel">
             <h2>Declension</h2>
             <p lang="pl">Sometimes the Polish words you see look slightly different when used in different contexts -
@@ -526,7 +527,7 @@
               <a href="about.html" target="_blank">@Weronika</a>
             </div>
           </div>
-          <button class="lesson lesson--wordOrder">Word order</button>
+          <button class="acc lesson lesson--wordOrder">Word order</button>
           <div class="panel">
             <h2>Word order</h2>
             <p>The most important thing when speaking a language is making sentences. You can learn as much vocabulary
@@ -674,10 +675,10 @@
               <a href="about.html" target="_blank">@Weronika</a>
             </div>
           </div>
-          <button class="lesson lesson--adj">Adjectives</button>
+          <button class="acc lesson lesson--adj">Adjectives</button>
           <div class="panel">
             <h2>Adjectives</h2>
-            <p lang="pl">As you could see in the previous lesson about declension, in Polish language nouns change
+            <p lang="pl">As you could see in the previous acc lesson about declension, in Polish language nouns change
               depending on so
               called cases (pl. przypadki). Adjectives don’t differ in this aspect. There are 7 cases, and the questions
               we ask to find a right change (odmiana) are unchangeable. <br>
@@ -851,7 +852,7 @@
               <a href="about.html" target="_blank">@Lena</a>
             </div>
           </div>
-          <button class="lesson lesson--nounGender">Noun grammatical gender</button>
+          <button class="acc lesson lesson--nounGender">Noun grammatical gender</button>
           <div class="panel">
             <h2>Noun grammatical gender</h2>
             <p>
@@ -1022,7 +1023,7 @@
               <a href="about.html" target="_blank">@Martyna</a>
             </div>
           </div>
-          <button class="lesson lesson--to-be">To be verb</button>
+          <button class="acc lesson lesson--to-be">To be verb</button>
           <div class="panel">
             <h2>To be verb</h2>
             <p>Verb „to be” is usually the first verb you learn when studying a new language. So, let’s see what is
@@ -1089,7 +1090,7 @@
                 <span class="accent">To jest</span> uniwersytet – This is a university. <br></span>
             </p>
             <p>You might see that in this case meaning slightly changes depending on the noun or pronoun, <b>not the
-                verb</b>. Don’t worry about nouns declension too much in this lesson – just focus on getting <span
+                verb</b>. Don’t worry about nouns declension too much in this acc lesson – just focus on getting <span
                 lang="pl">być</span>
               right.
               <br><br>
@@ -1099,30 +1100,30 @@
               <p>You see a group of males and can clearly see they are university students. How would you start
                 describing
                 them?</p>
-              <input type="radio" id="mc" name="question1" value="1">Ja jestem...
-              <input type="radio" id="mc" name="question1" value="2"><span lang="pl">Oni są...</span>
-              <input type="radio" id="mc" name="question1" value="3">On jest...
+              <input type="radio" name="question1" value="1">Ja jestem...
+              <input type="radio" name="question1" value="2"><span lang="pl">Oni są...</span>
+              <input type="radio" name="question1" value="3">On jest...
 
               <p>If your mum was a teacher, how would you start this sentence? </p>
-              <input type="radio" id="mc" name="question2" value="1">Ona jest...
-              <input type="radio" id="mc" name="question2" value="2">Ono jest...
-              <input type="radio" id="mc" name="question2" value="3"><span lang="pl">Oni są...</span>
+              <input type="radio" name="question2" value="1">Ona jest...
+              <input type="radio" name="question2" value="2">Ono jest...
+              <input type="radio" name="question2" value="3"><span lang="pl">Oni są...</span>
 
               <p>You are Korean – how would you start introducing yourself? </p>
-              <input type="radio" id="mc" name="question3" value="1"><span lang="pl">Ty jesteś...</span>
-              <input type="radio" id="mc" name="question3" value="2"><span lang="pl">One są...</span>
-              <input type="radio" id="mc" name="question3" value="3">Ja jestem...
+              <input type="radio" name="question3" value="1"><span lang="pl">Ty jesteś...</span>
+              <input type="radio" name="question3" value="2"><span lang="pl">One są...</span>
+              <input type="radio" name="question3" value="3">Ja jestem...
 
               <p>Your female friends you came to a party with are all university students – how would you introduce them
                 to other people?</p>
-              <input type="radio" id="mc" name="question4" value="1"><span lang="pl">Wy jesteście...</span>
-              <input type="radio" id="mc" name="question4" value="2"><span lang="pl">Ty jesteś...</span>
-              <input type="radio" id="mc" name="question4" value="3"><span lang="pl">One są...</span>
+              <input type="radio" name="question4" value="1"><span lang="pl">Wy jesteście...</span>
+              <input type="radio" name="question4" value="2"><span lang="pl">Ty jesteś...</span>
+              <input type="radio" name="question4" value="3"><span lang="pl">One są...</span>
 
               <p>Your Polish friends are with you. What would you say to them? </p>
-              <input type="radio" id="mc" name="question5" value="1"><span lang="pl">Wy jesteście...</span>
-              <input type="radio" id="mc" name="question5" value="2"><span lang="pl">One są...</span>
-              <input type="radio" id="mc" name="question5" value="3"><span lang="pl">Ty jesteś...</span>
+              <input type="radio" name="question5" value="1"><span lang="pl">Wy jesteście...</span>
+              <input type="radio" name="question5" value="2"><span lang="pl">One są...</span>
+              <input type="radio" name="question5" value="3"><span lang="pl">Ty jesteś...</span>
 
 
               <p> You can also try to translate following sentences:<br></p>
@@ -1148,10 +1149,11 @@
               <a href="about.html" target="_blank">@Martyna</a>
             </div>
           </div>
-          <button class="lesson lesson--polish-idioms">10 Polish idioms (bonus)</button>
+          <button class="acc lesson lesson--polish-idioms">10 Polish idioms (bonus)</button>
           <div class="panel">
             <h2>10 Polish idioms (bonus)</h2>
-            <p>Today we are going to have a quite fun lesson – we will learn about a bunch of Polish idioms/phrasemes.
+            <p>Today we are going to have a quite fun acc lesson – we will learn about a bunch of Polish
+              idioms/phrasemes.
               <br> <br>
               Idioms or phrasemes are usually defined as a few words which together hold a certain meaning but if you
               analyzed them separately or in a literal way, they either would not make much sense or the literal sense
@@ -1180,7 +1182,7 @@
               ● <span lang="pl">Flaki z olejem </span>(lit. Guts with oil) – something is very boring <br>
               <span class="example">Example:</span> <br>
               <span lang="pl">Ta lekcja jest nudna jak flaki z olejem.</span> <br>
-              This lesson is boring as hell. <br> <br>
+              This acc lesson is boring as hell. <br> <br>
               ● <span lang="pl">Nie kiwnąć palcem</span> (lit. To not flinch one’s finger) – to not do anything, usually
               <br>
               to help
@@ -1225,22 +1227,22 @@
             </div>
           </div>
           <a href="./test/unit0/" target="_blank">
-            <button class="lesson lesson--testUnit0">UNIT 0 - Test</button>
+            <button class="acc lesson lesson--testUnit0">UNIT 0 - Test</button>
           </a>
         </div>
-        <!-- <button class="accordion-4">Lesson 3</button>
+        <!-- <button class="accordion-4">acc lesson 3</button>
         <div class="panel">
-          <h2>Lesson 3</h2><br>
+          <h2>acc lesson 3</h2><br>
           <p></p>
         </div>
-        <button class="accordion-4">Lesson 4</button>
+        <button class="accordion-4">acc lesson 4</button>
         <div class="panel">
-          <h2>Lesson 4</h2><br>
+          <h2>acc lesson 4</h2><br>
           <p></p>
         </div>
-        <button class="accordion-4">Lesson 5</button>
+        <button class="accordion-4">acc lesson 5</button>
         <div class="panel">
-          <h2>Lesson 5</h2><br>
+          <h2>acc lesson 5</h2><br>
           <p></p>
         </div> -->
       </div>
