--- a/stuff/dialogue.html
+++ b/stuff/dialogue.html
@@ -69,7 +69,7 @@
                 <h1>Dialogue</h1>
                 <article>
                     <div class="container">
-                        <button class="dialogue dialogue-polish__conversation">Polish Conversation</button>
+                        <button class="acc dialogue dialogue-polish__conversation">Polish Conversation</button>
                         <div class="panel">
                             <h2>General conversation</h2>
                             <p> If you are starting learning Polish language you might face many difficult phrases and
@@ -136,10 +136,11 @@
                                 <a href="../about.html" target="_blank">@Justyna</a>
                             </div>
                         </div>
-                        <button class="dialogue dialogue-first__meting">First meeting</button>
+                        <button class="acc dialogue dialogue-first__meting">First meeting</button>
                         <div class="panel">
                             <h2>Polish Conversation – First meeting</h2>
-                            <p> In the previous dialogue you have learnt simple phrases for daily conversations. You can
+                            <p> In the previous acc dialogue you have learnt simple phrases for daily conversations. You
+                                can
                                 show your gratitude or apologize. When someone is talking too fast you can ask that
                                 person, to talk slowly. Now, when you know some more words – it’s time for more
                                 vocabulary!
@@ -290,7 +291,7 @@
                                 <a href="../about.html" target="_blank">@Justyna</a>
                             </div>
                         </div>
-                        <button class="dialogue dialogue-grocery__shoping">Grocery shopping</button>
+                        <button class="acc dialogue dialogue-grocery__shoping">Grocery shopping</button>
                         <div class="panel">
                             <h2>Grocery shopping</h2>
                             <p>In this lesson we are taking you on a trip to a local grocery store. In a lot of smaller
@@ -299,35 +300,35 @@
                                 problem with after this lesson. Also you should recognize some vocabulary from the
                                 previous lessons. <br><br>
 
-                                        Klient: Dzień dobry! <br>
-                                        Sprzedawca: Dzień dobry! Co podać? <br>
-                                        Klient: Proszę makaron penne i tuńczyka. <br>
-                                        Sprzedawca: Ile? <br>
-                                        Klient: Paczkę makaronu i dwie puszki tuńczyka.<br>
-                                        Sprzedawca: Proszę. I co jeszcze?<br>
-                                        Klient: Proszę jeszcze cebulę i śmietanę kremówkę.<br>
-                                        Sprzedawca: Proszę. To wszystko?<br>
-                                        Klient: Tak, dziękuję. Ile płacę?<br>
-                                        Sprzedawca: Czternaście siedemdziesiąt. Kartą czy gotówką?<br>
-                                        Klient: Zapłacę kartą.<br>
-                                        Sprzedawca: Czy drukować potwierdzenie?<br>
-                                        Klient: Nie, dziękuję. Do widzenia.<br>
-                                        Sprzedawca: Dziękuję. Do widzenia.<br>
-                                    <br>
-                                    klʲɛnt: d͡ʑɛɲ dɔbrɨ!<br>
-                                        spʂɛdaft͡sa: d͡ʑɛɲ dɔbrɨ! t͡sɔ pɔdat͡ɕ?<br>
-                                        klʲɛnt: prɔʂɛ̃w̃ makarɔn pɛnnɛ i tuɲʈ͡ʂɨka <br>
-                                        spʂɛdaft͡sa: ilɛ? <br>
-                                        klʲɛnt: paʈ͡ʂkɛ̃w̃ makarɔnu i dvʲɛ puʂkʲi tuɲʈ͡ʂɨka. <br>
-                                        spʂɛdaft͡sa: prɔʂɛ̃w̃. i t͡sɔ jɛʂʈ͡ʂɛ?<br>
-                                        klʲɛnt: prɔʂɛ̃w̃ jɛʂʈ͡ʂɛ t͡sɛbulɛ̃w̃ i ɕmʲɛtanɛ̃w̃ krɛmufkɛ̃w̃.<br>
-                                        spʂɛdaft͡sa: prɔʂɛ̃w̃. tɔ fʂɨstkɔ?<br>
-                                        klʲɛnt: tak, d͡ʑʲɛŋkujɛ̃w̃. ilɛ pwat͡sɛ̃w̃?<br>
-                                        spʂɛdaft͡sa: ʈ͡ʂtɛrnaɕt͡ɕɛ ɕɛdɛmd͡ʑɛɕɔnt. kartɔ̃w̃ ʈ͡ʂɨ gɔtufkɔ̃w̃?<br>
-                                        klʲɛnt: zapwat͡sɛ̃w̃ kartɔ̃w̃. <br>
-                                        spʂɛdaft͡sa: ʈ͡ʂɨ drukɔvat͡ɕ pɔtfʲɛrd͡zɛɲɛ?<br>
-                                        klʲɛnt: ɲɛ, d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br>
-                                        spʂɛdaft͡sa: d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br><br>
+                                Klient: Dzień dobry! <br>
+                                Sprzedawca: Dzień dobry! Co podać? <br>
+                                Klient: Proszę makaron penne i tuńczyka. <br>
+                                Sprzedawca: Ile? <br>
+                                Klient: Paczkę makaronu i dwie puszki tuńczyka.<br>
+                                Sprzedawca: Proszę. I co jeszcze?<br>
+                                Klient: Proszę jeszcze cebulę i śmietanę kremówkę.<br>
+                                Sprzedawca: Proszę. To wszystko?<br>
+                                Klient: Tak, dziękuję. Ile płacę?<br>
+                                Sprzedawca: Czternaście siedemdziesiąt. Kartą czy gotówką?<br>
+                                Klient: Zapłacę kartą.<br>
+                                Sprzedawca: Czy drukować potwierdzenie?<br>
+                                Klient: Nie, dziękuję. Do widzenia.<br>
+                                Sprzedawca: Dziękuję. Do widzenia.<br>
+                                <br>
+                                klʲɛnt: d͡ʑɛɲ dɔbrɨ!<br>
+                                spʂɛdaft͡sa: d͡ʑɛɲ dɔbrɨ! t͡sɔ pɔdat͡ɕ?<br>
+                                klʲɛnt: prɔʂɛ̃w̃ makarɔn pɛnnɛ i tuɲʈ͡ʂɨka <br>
+                                spʂɛdaft͡sa: ilɛ? <br>
+                                klʲɛnt: paʈ͡ʂkɛ̃w̃ makarɔnu i dvʲɛ puʂkʲi tuɲʈ͡ʂɨka. <br>
+                                spʂɛdaft͡sa: prɔʂɛ̃w̃. i t͡sɔ jɛʂʈ͡ʂɛ?<br>
+                                klʲɛnt: prɔʂɛ̃w̃ jɛʂʈ͡ʂɛ t͡sɛbulɛ̃w̃ i ɕmʲɛtanɛ̃w̃ krɛmufkɛ̃w̃.<br>
+                                spʂɛdaft͡sa: prɔʂɛ̃w̃. tɔ fʂɨstkɔ?<br>
+                                klʲɛnt: tak, d͡ʑʲɛŋkujɛ̃w̃. ilɛ pwat͡sɛ̃w̃?<br>
+                                spʂɛdaft͡sa: ʈ͡ʂtɛrnaɕt͡ɕɛ ɕɛdɛmd͡ʑɛɕɔnt. kartɔ̃w̃ ʈ͡ʂɨ gɔtufkɔ̃w̃?<br>
+                                klʲɛnt: zapwat͡sɛ̃w̃ kartɔ̃w̃. <br>
+                                spʂɛdaft͡sa: ʈ͡ʂɨ drukɔvat͡ɕ pɔtfʲɛrd͡zɛɲɛ?<br>
+                                klʲɛnt: ɲɛ, d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br>
+                                spʂɛdaft͡sa: d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br><br>
                                 Customer: Good morning! <br>
                                 Shopkeeper: Good morning! How can I help you? <br>
                                 Customer: I would like penne pasta and some tuna. <br>
@@ -344,7 +345,7 @@
                                 Shopkeeper: Goodbye!<br>
                                 <br>
 
-                                So from this dialogue you already have learned some new things:
+                                So from this acc dialogue you already have learned some new things:
                                 <br>
 
                                 forma płatności (fɔrma pwatnɔɕt͡ɕi) - payment method :
